libs/logging/tests/trybuild/define_logger_with_invalid_target.stderr
error[E0080]: evaluation panicked: the loggin target must starts with "bee::"
 --> tests/trybuild/define_logger_with_invalid_target.rs:1:1
  |
1 | logging::define_logger! { invalid::target }
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ evaluation of `_` failed here
  |
  = note: this error originates in the macro `$crate::panic::panic_2021` which comes from the expansion of the macro `logging::define_logger` (in Nightly builds, run with -Z macro-backtrace for more info)
