libs/logging/tests/trybuild/define_logger_with_invalid_target.rs
logging::define_logger! { invalid::target }

fn main() {}
